--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -10,12 +10,17 @@
     <h1>Register</h1>
 
     {{ form_start(registrationForm) }}
-        {{ form_row(registrationForm.pseudo) }}
-        {{ form_row(registrationForm.plainPassword, {
-            label: 'Password'
-        }) }}
-        {{ form_row(registrationForm.agreeTerms) }}
+    {{ form_row(registrationForm.pseudo) }}
+    {{ form_row(registrationForm.prenom) }}
+    {{ form_row(registrationForm.nom) }}
+    {{ form_row(registrationForm.telephone) }}
+    {{ form_row(registrationForm.email) }}
 
-        <button type="submit" class="btn">Register</button>
+    {{ form_row(registrationForm.plainPassword, {
+        label: 'Password'
+    }) }}
+
+
+    <button type="submit" class="btn">Register</button>
     {{ form_end(registrationForm) }}
 {% endblock %}
