Creation page de base avec Bootstrap

--- a/templates/main/home.html.twig
+++ b/templates/main/home.html.twig
@@ -1,1 +1,4 @@
-<h1>Hello test {{ app.user.pseudo }}</h1>
+{% extends 'base.html.twig' %}
+    {% block main %}
+{#<h1>Hello test {{ app.user.pseudo }}</h1>#}
+    {% endblock %}
