--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -60,6 +60,11 @@
                         <a class="dropdown-item" href="#">Something else here</a>
                     </div>
                 </li>
+                {% if (is_granted("ROLE_ADMIN")) %}
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('app_register') }}" title="register">Enregistrer un utilisateur</a>
+                    </li>
+                {% endif %}
                 <li class="nav-item">
                     <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
                 </li>
