ajouts sur "campus.twig"

--- a/templates/cities/campus.html.twig
+++ b/templates/cities/campus.html.twig
@@ -4,6 +4,25 @@
 
 {% block main %}
 
+<h1>Gérer les campus</h1>
+
+<div>
+
+    <h2>Filtrer les sites</h2>
+
+    <form class="form-group row">
+        <label class=col-4" for="campus">Le nom contient :</label>
+        <input class=col-4" type="text" name="campus" id="campus">
+        <input class=col-4" type="submit" value="Rechercher">
+    </form>
+
+</div>
+
+<div>
+
+
+
+</div>
 
 
 {% endblock %}
