--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -38,7 +38,7 @@
                 <li class="nav-item">
                     {% if app.user %}
                         <li class="nav-item">
-                        <a class="nav-link" href="{{ path('app_logout') }}" title="Disconnect">Se déconnecter ({{ app.user.username }})</a>
+                        <a class="nav-link" href="{{ path('app_logout') }}" title="Disconnect">Se déconnecter</a>
                         </li>
                     {% else %}
                         <li class="nav-item">
@@ -75,6 +75,12 @@
             </form>
         </div>
     </nav>
+    {% if app.user %}
+        <div class="text-right">
+            <h4>Date du jour : {{ "now"|date("d/m/Y") }}</h4>
+            <h4>Participant : {{ app.user.prenom }} {{ app.user.nom|first }}.</h4>
+        </div>
+    {% endif %}
 </header>
 
 <main>
