--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -18,7 +18,7 @@
         <img src="{{ asset('IMAGES/logo_test.jpg') }}" width="100px" height="100px" />
     </div>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
-        <a class="navbar-brand" href="#">Navbar</a>
+
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon"></span>
         </button>
@@ -49,30 +49,18 @@
                         </li>
                     {% endif %}
                 </li>
-                <li class="nav-item dropdown">
-                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
-                        Dropdown
-                    </a>
-                    <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                        <a class="dropdown-item" href="#">Action</a>
-                        <a class="dropdown-item" href="#">Another action</a>
-                        <div class="dropdown-divider"></div>
-                        <a class="dropdown-item" href="#">Something else here</a>
-                    </div>
-                </li>
                 {% if (is_granted("ROLE_ADMIN")) %}
                     <li class="nav-item">
                         <a class="nav-link" href="{{ path('app_register') }}" title="register">Enregistrer un utilisateur</a>
                     </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('cities_villes') }}" title="ville">Ville</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link" href="{{ path('cities_campus') }}" title="campus">Campus</a>
+                    </li>
                 {% endif %}
-                <li class="nav-item">
-                    <a class="nav-link disabled" href="#" tabindex="-1" aria-disabled="true">Disabled</a>
-                </li>
             </ul>
-            <form class="form-inline my-2 my-lg-0">
-                <input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
-                <button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
-            </form>
         </div>
     </nav>
     {% if app.user %}
@@ -84,7 +72,7 @@
 </header>
 
 <main>
-    <div class="box container">
+    <div class="box container-fluid">
         {% block main %}{% endblock %}
     </div>
 </main>
