--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -15,7 +15,7 @@
     {{ form_row(registrationForm.nom) }}
     {{ form_row(registrationForm.telephone) }}
     {{ form_row(registrationForm.email) }}
-    {{ form_row(registrationForm.noCampus) }}
+    {{ form_row(registrationForm.campus) }}
     {{ form_row(registrationForm.plainPassword, {
         label: 'Password'
     }) }}
