--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} | Accueil!{% endblock %}
+{% block title %} {{ parent() }} | Accueil!{% endblock %}
 
 {% block main %}
 
@@ -70,5 +70,45 @@
         </div>
 
     </form>
+
+    <div>
+        <table class="table table-striped">
+
+            <thead>
+            <tr>
+                <th scope="col">Nom de la sortie</th>
+                <th scope="col">Date de la sortie</th>
+                <th scope="col">Clôture</th>
+                <th scope="col">inscrits/places</th>
+                <th scope="col">Etat</th>
+                <th scope="col">Inscrit</th>
+                <th scope="col">Organisateur</th>
+                <th scope="col">Actions</th>
+            </tr>
+            </thead>
+
+            <tbody>
+            {% for sortie in sorties%}
+                <tr>
+                    <td>{{ sortie.nom }}</td>
+                    <td>{{ sortie.datedebut|date("d/m/Y") }}</td>
+                    <td>{{ sortie.datecloture|date("d/m/Y") }}</td>
+                    <td>{{ sortie.nbinscriptionsmax }}</td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                    <td></td>
+                </tr>
+            {% endfor %}
+            </tbody>
+
+            <tfoot>
+            <tr>
+                <td><button type="submit" class="btn btn-primary mb-2">Créer une sortie</button></td>
+            </tr>
+            </tfoot>
+
+        </table>
+    </div>
 
 {% endblock %}
