--- a/templates/base.html.twig
+++ b/templates/base.html.twig
@@ -32,7 +32,7 @@
                 <li class="nav-item">
                     {% if app.user %}
                         <li class="nav-item active">
-                            <a class="nav-link" href="{{ path('home') }}">Accueil <span class="sr-only">(current)</span></a>
+                            <a class="nav-link" href="{{ path('accueil') }}">Accueil <span class="sr-only">(current)</span></a>
                         </li>
                         <li class="nav-item">
                             <a class="nav-link" href="{{ path('app_logout') }}" title="Disconnect">Se déconnecter</a>
