--- a/templates/accueil/index.html.twig
+++ b/templates/accueil/index.html.twig
@@ -26,7 +26,7 @@
                 </div>
 
                 <div class="form-group row">
-                    <label for="inputPassword" class="col-sm-5 col-form-label">Le nom de la sortie contient :</label>
+                    <label for="inputRecherche" class="col-sm-5 col-form-label">Le nom de la sortie contient :</label>
                     <div class="col-sm-6">
                         <input type="text" class="form-control" id="inputRecherche" placeholder="Recherche">
                     </div>
@@ -48,7 +48,8 @@
             <div class="col-3 my-auto">
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Sorties dont je suis l'organisateur/trice</label>
+                    <label class="form-check-label" for="inlineCheckbox1">Sorties dont je suis
+                        l'organisateur/trice</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
@@ -56,7 +57,8 @@
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
-                    <label class="form-check-label" for="inlineCheckbox1">Sorties auxquelles je ne suis pas inscrit/e</label>
+                    <label class="form-check-label" for="inlineCheckbox1">Sorties auxquelles je ne suis pas
+                        inscrit/e</label>
                 </div>
                 <div class="form-check">
                     <input class="form-check-input" type="checkbox" id="inlineCheckbox1" value="option1">
@@ -88,14 +90,20 @@
             </thead>
 
             <tbody>
-            {% for sortie in sorties%}
+            {% for sortie in sorties %}
                 <tr>
                     <td>{{ sortie.nom }}</td>
                     <td>{{ sortie.datedebut|date("d/m/Y") }}</td>
                     <td>{{ sortie.datecloture|date("d/m/Y") }}</td>
                     <td>{{ sortie.nbinscriptionsmax }}</td>
                     <td>{{ sortie.etat.libelle }}</td>
-                    <td>{{ dump(sortie.sortieUser.contains(app.user.id)) }}</td>
+                    <td>
+                        {% for participant in inscriptions %}
+                            {% if (participant.user == app.user) and (participant.sortie == sortie) %}
+                                X
+                            {% endif %}
+                        {% endfor %}
+                    </td>
                     <td>{{ sortie.organisateur.nom }} {{ sortie.organisateur.prenom|first }}.</td>
                     <td></td>
                 </tr>
@@ -104,7 +112,9 @@
 
             <tfoot>
             <tr>
-                <td><a href="{{ path('creation_sortie') }}"><button type="submit" class="btn btn-primary mb-2">Créer une sortie</button></a></td>
+                <td><a href="{{ path('creation_sortie') }}">
+                        <button type="submit" class="btn btn-primary mb-2">Créer une sortie</button>
+                    </a></td>
             </tr>
             </tfoot>
 
