Uniformisation des titles

--- a/templates/affichage_d_une_sortie/affichageSortie.html.twig
+++ b/templates/affichage_d_une_sortie/affichageSortie.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {{ parent() }} | Afficher une sortie{% endblock %}
+{% block title %} {{ parent() }} Afficher une sortie{% endblock %}
 
 {% block main %}
     <ul><u><b>Nom de la sortie :</b></u>{{ sortie.nom }}</ul>
