--- a/templates/cities/campus.html.twig
+++ b/templates/cities/campus.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Les campus | {{ parent() }} {% endblock %}
+{% block title %}{{ parent() }} Les campus {% endblock %}
 
 {% block main %}
 
