--- a/templates/cities/villes.html.twig
+++ b/templates/cities/villes.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %}Les villes | {{ parent() }} {% endblock %}
+{% block title %}{{ parent() }} Les villes {% endblock %}
 
 {% block main %}
 
