--- a/templates/creation_sortie/creation.html.twig
+++ b/templates/creation_sortie/creation.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {{ parent() }} | Creation de Sorties{% endblock %}
+{% block title %} {{ parent() }} Creation de Sorties{% endblock %}
 
 {% block main %}
 
