--- a/templates/compte/detail.html.twig
+++ b/templates/compte/detail.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %} {{ parent() }} Compte Utilisateur {% endblock %}
+
 {% block main %}
     <h2>Compte de L'utilisateur {{ account.pseudo }}</h2>
     <ul>
