--- a/templates/compte/list.html.twig
+++ b/templates/compte/list.html.twig
@@ -1,5 +1,7 @@
 {% extends 'base.html.twig' %}
 
+{% block title %}{{ parent() }}{% endblock %}
+
 {% block main %}
     <h2>Les utilisateurs</h2>
 
