--- a/templates/modification_sortie/modificationSortie.html.twig
+++ b/templates/modification_sortie/modificationSortie.html.twig
@@ -1,6 +1,6 @@
 {% extends 'base.html.twig' %}
 
-{% block title %} {{ parent() }} | Modification de Sorties{% endblock %}
+{% block title %} {{ parent() }} Modification de Sorties{% endblock %}
 
 {% block main %}
 
