--- a/templates/compte/detail.html.twig
+++ b/templates/compte/detail.html.twig
@@ -11,7 +11,7 @@
         <li>{{ account.email }}</li>
 {#        {% for ecole in account.campus  %}#}
 {#            {{ dump(account.nom_campus ) }}#}
-{#        <li>{{ account.campus.nom_campus }}</li>#}
+{#        <li>{{ app.campus.nom_campus }}</li>#}
 {#        {% endfor %}#}
         <li>{{ account.campus.getNomCampus() }}</li>
     </ul>
