Creation de la page AnnulationSortie, ajout d'un champ MotifAnnulation dans la table Sortie

--- a/templates/modification_sortie/modificationSortie.html.twig
+++ b/templates/modification_sortie/modificationSortie.html.twig
@@ -5,7 +5,7 @@
 {% block main %}
 
 
-<h1>Creation de sorties</h1>
+<h1>Modification de sorties</h1>
 
 {{ form_start(modificationSortieForm) }}
     {{ form_row(modificationSortieForm.nom) }}
