--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -16,6 +16,7 @@
     {{ form_row(registrationForm.telephone) }}
     {{ form_row(registrationForm.email) }}
     {{ form_row(registrationForm.campus) }}
+    {{ form_row(registrationForm.roles) }}
     {{ form_row(registrationForm.plainPassword, {
         label: 'Password'
     }) }}
