--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -17,6 +17,7 @@
     {{ form_row(registrationForm.email) }}
     {{ form_row(registrationForm.campus) }}
     {{ form_row(registrationForm.roles) }}
+    {{ form_row(registrationForm.actif) }}
     {{ form_row(registrationForm.plainPassword, {
         label: 'Password'
     }) }}
